Adding new tasks, marking them as done

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
         </div>
         
         <input id="newTask" type="text" placeholder="Add New Task">
+        
         <div id="content">
-            <ul>
+            <ul id="list">
 
             </ul>
         </div>
