Added delete button

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <button id="showInput">+</button>
         </div>
         
-        <input id="newTask" type="text" placeholder="Add New Task">
-        
+        <input id="newTask" type="text" placeholder="Add New Task" autocomplete="off">
+
         <div id="content">
             <ul id="list">
 
